solutions/content-api.manifest.yaml
---
# Source: content-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-content-api
  labels:
    helm.sh/chart: content-api-0.1.0
    app.kubernetes.io/name: content-api
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: content-api
    app.kubernetes.io/instance: release-name
---
# Source: content-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-content-api
  labels:
    helm.sh/chart: content-api-0.1.0
    app.kubernetes.io/name: content-api
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: content-api
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: content-api
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-content-api
      securityContext:
        {}
      containers:
        - name: content-api
          securityContext:
            {}
          image: "whatthehackmsft/content-api:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: content-api/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-content-api-test-connection"
  labels:
    helm.sh/chart: content-api-0.1.0
    app.kubernetes.io/name: content-api
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-content-api:3001']
  restartPolicy: Never
