solutions/mongodb.manifests.yaml
---
# Source: mongodb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mongodb
  labels:
    helm.sh/chart: mongodb-0.1.0
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: release-name
---
# Source: mongodb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mongodb
  labels:
    helm.sh/chart: mongodb-0.1.0
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-mongodb
      securityContext:
        {}
      containers:
        - name: mongodb
          securityContext:
            {}
          image: "mongo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 27017
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: mongodb/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-mongodb-test-connection"
  labels:
    helm.sh/chart: mongodb-0.1.0
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-mongodb:27017']
  restartPolicy: Never
