solutions/fab-medical.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fab-medical-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-content-web
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name:  release-name-content-api
                port:
                  number: 3001
